Changing Zend_View's helper method partial() to render() due to performance.
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/views/scripts/account/applications.phtml
+++ b/application/views/scripts/account/applications.phtml
@@ -41,6 +41,6 @@ foreach($this->listConsumerTokens as $consumer): ?>
 <p>If you are a developer using the Plifk API, <a href="<?= $this->url(array(), "apikeys") ?>" title="Your API keys">your keys are here</a>.</p>
 </div>
 <div class="yui-u accountside">
-<?= $this->partial("/account/menu.phtml"); ?>
+<?= $this->render("/account/menu.phtml"); ?>
 </div>
 </div>
