--- a/application/views/scripts/account/picture.phtml
+++ b/application/views/scripts/account/picture.phtml
@@ -22,6 +22,6 @@ if($avatarprofile) {
 <?= $this->submitPictureForm ?>
 </div>
 <div class="yui-u accountside">
-<?= $this->partial("/account/menu.phtml"); ?>
+<?= $this->render("/account/menu.phtml"); ?>
 </div>
 </div>
