--- a/application/views/scripts/account/twitter.phtml
+++ b/application/views/scripts/account/twitter.phtml
@@ -23,6 +23,6 @@ if(isset($this->twitterInfo) || isset($this->invalidTwitterAccount)):
 <p class="tip"><small>Check your <a href="http://twitter.com/account/connections" class="new-window">connections on Twitter</a>.</small></p>
 </div>
 <div class="yui-u accountside">
-<?= $this->partial("/account/menu.phtml"); ?>
+<?= $this->render("/account/menu.phtml"); ?>
 </div>
 </div>
