Using bcrypt for encrypting the password now in a more robust and safer way. Several changed took place to make this happen. Stopped using the membership date as a parameter to making the encrypted hash for the credential.
Signed-off-by: Henrique Vicente <henriquevicente@gmail.com>

--- a/application/views/scripts/logout/index.phtml
+++ b/application/views/scripts/logout/index.phtml
@@ -2,9 +2,14 @@
 $registry = Zend_Registry::getInstance();
 $config = $registry->get("config");
 $this->headTitle("Sign out");
+$signedUserInfo = $registry->get("signedUserInfo");
 ?>
 <div class="yui-gc">
 <div class="yui-u first">
+<?php if(isset($_GET['please']) || $registry->isRegistered("pleaseSignout")):?>
+<h2>Logout first</h2>
+<p>Either an action you have tried to perform or a section you have tried to access can not be performed as a signed in user to the account <em><?= $this->escape($signedUserInfo['name']) ?> (<?= $this->escape($signedUserInfo['alias']) ?>)</em>. Please, sign out and try again.</p>
+<?php endif; ?>
 <h2>Sign out of <?= $this->escape($config->applicationname) ?></h2>
 <p>If you ever forget to logout from a public computer, sign out all other sessions from this page.</p>
 <table>
@@ -23,9 +28,6 @@ $this->headTitle("Sign out");
 </tr>
 </table>
 <p>This computer is using IP address <?= $this->escape($_SERVER['REMOTE_ADDR']) ?>.
-<?php if(isset($_GET['please']) || $registry->isRegistered("pleaseSignout")):?>
-<p><strong>Notice:</strong> The action you tried to perform or the section you tried to access can not be performed by you while signed in to this account. Please, sign out and try again.</p>
-<?php endif; ?>
 <?php
 if($this->remote_logout_done):
 ?>
