--- a/application/views/scripts/password/password.phtml
+++ b/application/views/scripts/password/password.phtml
@@ -1,5 +1,5 @@
 <?php
-$this->headTitle("Your password");
+$this->headTitle("Set the password for ".$this->escape($this->userInfoDataForPasswordChange['name'])." (".$this->escape($this->userInfoDataForPasswordChange['alias']).")");
 $auth = Zend_Auth::getInstance();
 $params = $this->request->getParams();
 if($auth->hasIdentity()):
@@ -9,14 +9,14 @@ if($auth->hasIdentity()):
 <?php endif; ?>
 <?php
 if(isset($this->passwordReset)): ?>
-<h2>Your password is updated</h2>
+<h2>The password for the account <em><?= $this->escape($this->userInfoDataForPasswordChange['name'])." (".$this->escape($this->userInfoDataForPasswordChange['alias']);?>)</em> has been updated</h2>
 <?php if($auth->hasIdentity()): ?>
-<p>From now on you will have to use it to log in.</p>
+<p>From now on you will have to use this password to log in this account.</p>
 <?php else: ?>
 <p>Now you can <a href="<?= $this->url(array(), "login") ?>" rel="nofollow">log in</a> with it.</p>
 <?php endif; ?>
 <?php else: ?>
-<h2>Change your password</h2>
+<h2>Set the password for <?= $this->escape($this->userInfoDataForPasswordChange['name']); ?> (<?= $this->escape($this->userInfoDataForPasswordChange['alias']) ?>)</h2>
 <?php
 $this->passwordForm->getElement("password")->getDecorator("description")->setEscape(false);
 ?>
