configuration on Zend_Registry now a array instead of a object
Also the code is cleaner with regarding of accessing the configuration data.

Signed-off-by: Henrique Vicente de Oliveira Pinto <henvic@henvic-mp.local>

--- a/application/layout/scripts/analytics.phtml
+++ b/application/layout/scripts/analytics.phtml
@@ -9,7 +9,7 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 </script>
 <script type="text/javascript">
 try {
-var pageTracker = _gat._getTracker("<?php echo $config->services->ganalytics->tracker_id ?>");
+var pageTracker = _gat._getTracker("<?php echo $config['services']['ganalytics']['tracker_id'] ?>");
 pageTracker._trackPageview();
 } catch(err) {}</script>
 <?php endif; ?>
