--- a/application/layout/scripts/footer.phtml
+++ b/application/layout/scripts/footer.phtml
@@ -1,5 +1,5 @@
 <ul>
-<li class="first"><?= $this->escape($config->applicationname) ?></li>
+<li class="first"><?= $this->escape($config['applicationname']) ?></li>
 <li><a href="<?= $this->url(array(), "index"); ?>">Home</a></li>
 <li><a href="<?= $this->staticUrl("/tos") ?>">Terms of Service</a></li>
 <li><a href="<?= $this->staticUrl("/privacy") ?>">Privacy Policy</a></li>
