--- a/application/views/scripts/index/unsigned.phtml
+++ b/application/views/scripts/index/unsigned.phtml
@@ -4,7 +4,7 @@ $auth = Zend_Auth::getInstance();
 $registry = Zend_Registry::getInstance();
 $config = $registry->get("config");
 
-$this->headTitle($config->applicationname, "SET");
+$this->headTitle($config['applicationname'], "SET");
 
 $Credential = ML_Credential::getInstance();
 $this->loginform = $Credential->_getLoginForm();
@@ -19,7 +19,7 @@ Get your www.plifk.com/username</p>
 <ul id="home-buttons">
 <li class="join"><p><a href="<?= $this->url(array(), "join")?>">Join&nbsp;us</a> in just three steps.</p></li>
 <li class="tour"><p><a href="/tour">Take the tour</a>, check it out.</p></li>
-<li class="about"><p>Upload up to <?= file_size($config->share->monthlyLimit * 1024 * 1024 * 8) ?> <em>every month.</em></p></li>
+<li class="about"><p>Upload up to <?= file_size($config['share']['monthlyLimit'] * 1024 * 1024 * 8) ?> <em>every month.</em></p></li>
 </ul>
 </div>
 <div class="yui-u">
