--- a/application/views/scripts/invites/index.phtml
+++ b/application/views/scripts/invites/index.phtml
@@ -22,7 +22,7 @@ else: ?>
 <h2>Inviting is fun</h2>
 <p>Each invite code you get is good for opening one new account when our doors are closed because of our daily sign up limit, it's like a VIP pass.</p>
 <p>The invite codes are 100% anonymous, so you can give to anyone.</p>
-<p>New users might be asked to enter an invite code in the first step of the sign up process at <<?= $this->escape($config->webhost) ?><?= $this->url(array(), "join") ?></p>
+<p>New users might be asked to enter an invite code in the first step of the sign up process at <<?= $this->escape($config['webhost']) ?><?= $this->url(array(), "join") ?></p>
 <p>There is a limit of one account per user now, so don't use them yourself!</p>
 </div>
 <div class="yui-u">
