--- a/application/views/scripts/static/tos.phtml
+++ b/application/views/scripts/static/tos.phtml
@@ -14,7 +14,7 @@ $this->headTitle("Terms of Service");
 <li>You are the solely responsible for any actions taken by means of your access account.</li>
 <li>To the extent of where law permits Plifk reserves the right not to be hold liable for any disclosure of Content related to your account intentional or not, including, but not limited to, due to system fault or for compliance with applicable laws.</li>
 <li>In addition, Plifk may stop (permanently or temporarily) providing the services to you or any other without prior notice.</li>
-<li>Any information that you provide to us are subject to Plifk's <a href="http://<?= $this->escape($config->webhost) ?>/<?= $this->staticUrl("privacy") ?>">Privacy Policy</a>, which governs our collection and use of your information.</li>
+<li>Any information that you provide to us are subject to Plifk's <a href="http://<?= $this->escape($config['webhost']) ?>/<?= $this->staticUrl("privacy") ?>">Privacy Policy</a>, which governs our collection and use of your information.</li>
 </ol>
 
 <h3>Limitations of Service</h3>
@@ -42,9 +42,9 @@ You agree not to publicly display any material that may be inappropriate to mino
 All application that makes use of the API are required to use the available resources with regard to maintain a high quality of service. For that developers should understand that results should be cached when appropriate and any information retrieved by any method or any other means should be used with due respect to both the Privacy Policy and these Terms of Service. This include the protection of sensitive data, including, but not limited to tokens and other private user information.</p>
 
 <h3>About the validity of these Terms of Service</h3>
-<p>These terms may be revised from time to time, the most current version will always be at <a href="http://<?= $this->escape($config->webhost) ?>/<?= $this->staticUrl("tos") ?>">http://<?= $this->escape($config->webhost) ?>/<?= $this->staticUrl("tos") ?></a>. If the revision, in our sole discretion, is material enough you will be notified via the available means. By continuing to access or use the Services after those revisions become effective, you agree to be bound by the revised Terms.<br /><br />
+<p>These terms may be revised from time to time, the most current version will always be at <a href="http://<?= $this->escape($config['webhost']) ?>/<?= $this->staticUrl("tos") ?>">http://<?= $this->escape($config['webhost']) ?>/<?= $this->staticUrl("tos") ?></a>. If the revision, in our sole discretion, is material enough you will be notified via the available means. By continuing to access or use the Services after those revisions become effective, you agree to be bound by the revised Terms.<br /><br />
 
-If you have any questions about these Terms, please <a href="http://<?= $this->escape($config->webhost) ?>/<?= $this->staticUrl("about") ?>#contact">contact</a>.</p>
+If you have any questions about these Terms, please <a href="http://<?= $this->escape($config['webhost']) ?>/<?= $this->staticUrl("about") ?>#contact">contact</a>.</p>
 
 <hr />
 <p><em>Effective: October 30th, 2009</em></p>
