--- a/application/views/scripts/filepage/filepage.phtml
+++ b/application/views/scripts/filepage/filepage.phtml
@@ -8,7 +8,7 @@ $userInfo = $registry->get('userInfo');
 
 $this->headTitle($this->escape($shareInfo['title']), "PREPEND");
 
-$download_link = $this->escape($config->services->S3->sharesBucketAddress.$userInfo['alias']."/".$shareInfo['id']."-".$shareInfo['download_secret']."/".$shareInfo['filename']);
+$download_link = $this->escape($config['services']['S3']['sharesBucketAddress'].$userInfo['alias']."/".$shareInfo['id']."-".$shareInfo['download_secret']."/".$shareInfo['filename']);
 
 $Favorites = ML_Favorites::getInstance();
 $countFavorites = $Favorites->count($shareInfo['id']);
@@ -51,7 +51,7 @@ $countFavorites = $Favorites->count($shareInfo['id']);
 <tbody>
 <?php 
 $date = new Zend_Date(); $date->set($shareInfo['uploadedTime'], Zend_Date::ISO_8601);
-$shortlink = $config->URLshortening->addr.$this->escape(base58_encode($shareInfo['id']));
+$shortlink = $config['URLshortening']['addr'].$this->escape(base58_encode($shareInfo['id']));
 $metadata = array(
 "Filename" => $this->escape($shareInfo['filename']),
 "Size" => file_size($shareInfo['fileSize'], true),
