--- a/application/views/scripts/password/emailRecover.phtml
+++ b/application/views/scripts/password/emailRecover.phtml
@@ -8,10 +8,10 @@ Hi <?= $this->escape($this->recoverUser['name']) ?>!
 Your username at Plifk is <?= $this->escape($this->recoverUser['alias']) ?>.
 
 If you remember your password you can login right now at
-<?= ($config->ssl) ? "https://" . $config->webhostssl : "http://" . $config->webhost ?><?= $this->url(array(), "login") ?>
+<?= ($config['ssl']) ? "https://" . $config['webhostssl'] : "http://" . $config['webhost'] ?><?= $this->url(array(), "login") ?>
 
 If you need to set a new password go to
-<?= ($config->ssl) ? "https://" . $config->webhostssl : "http://" . $config->webhost ?><?= $this->url(array("confirm_uid" => $this->recoverUser['id'], "security_code" => $this->securitycode), "password_unsigned") ?>
+<?= ($config['ssl']) ? "https://" . $config['webhostssl'] : "http://" . $config['webhost'] ?><?= $this->url(array("confirm_uid" => $this->recoverUser['id'], "security_code" => $this->securitycode), "password_unsigned") ?>
 
 -
 Plifk
