--- a/application/views/scripts/upload/offline.phtml
+++ b/application/views/scripts/upload/offline.phtml
@@ -4,6 +4,6 @@ $config = $registry->get("config");
 $this->headTitle("Upload");
 ?>
 <h2>Upload system is down</h2>
-<p><?php if(!empty($config->uploadStatus->offlineMsg)):
-echo $this->escape($config->uploadStatus->offlineMsg); else: ?>
+<p><?php if(!empty($config['uploadStatus']['offlineMsg'])):
+echo $this->escape($config['uploadStatus']['offlineMsg']'); else: ?>
 We regreat for the inconvenience, but the upload system is down for a while. Please try later.<?php endif; ?></p>
