--- a/application/views/scripts/tags/tags.phtml
+++ b/application/views/scripts/tags/tags.phtml
@@ -9,7 +9,7 @@ if(!empty($this->tagsList)):
 foreach($this->tagsList as $tag):
 ?>
 <li>
-<a href="<?= $this->url(array("username" => $userInfo['alias'], "tag" => $tag['clean']), "tagpage_1stpage") ?>"><?= $this->escape($tag['raw']) ?></a> 
+<a href="<?= $this->url(array("username" => $userInfo['alias'], "tag" => $tag['clean']), "tagpage_1stpage") ?>" rel="tag"><?= $this->escape($tag['raw']) ?></a> 
 <?php if($auth->getIdentity() == $shareInfo['byUid']): ?>
 <small>
 <a href="<?= $this->url(array("username" => $userInfo['alias'], "share_id" => $shareInfo['id']), "sharepage_1stpage") ?>?deletetag=<?=$this->escape($tag['id']) ?>" rel="nofollow" class="delete" title="delete tag <?= $this->escape($tag['clean']) ?>">✘</a>
