add unused cache manifest & caching mechanics code
Signed-off-by: Henrique Vicente de Oliveira Pinto <henvic@henvic-mp.local>

--- a/application/layout/scripts/layout.phtml
+++ b/application/layout/scripts/layout.phtml
@@ -77,7 +77,7 @@ $this->headLink()->appendStylesheet($this->staticUrl("/plifk.css"));
 ?>
 <?= $this->doctype() ?>
 
-<html lang="en">
+<html lang="en"<?php /* manifest="<?= $this->staticUrl("/cache.manifest"); ?>"*/?>>
 <head>
 <?= $this->headTitle() ?>
 
